[gd_scene load_steps=12 format=2]

[ext_resource path="res://Assets/UI/Inventorygui.png" type="Texture" id=1]
[ext_resource path="res://Assets/PixelFont.tres" type="DynamicFont" id=2]
[ext_resource path="res://Assets/UI/button.png" type="Texture" id=3]
[ext_resource path="res://Assets/UI/button_pressed.png" type="Texture" id=4]
[ext_resource path="res://Extra/loot.gd" type="Script" id=5]
[ext_resource path="res://Assets/UI/Slots.png" type="Texture" id=6]
[ext_resource path="res://Assets/PixelRPG.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://Extra/ChestSlots.gd" type="Script" id=8]

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 6 )
region_rect = Rect2( 0, 0, 16, 16 )

[sub_resource type="DynamicFont" id=2]
size = 3
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=3]
size = 3
font_data = ExtResource( 7 )

[node name="ChestLootUi" type="Node2D"]
script = ExtResource( 5 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 128.0
margin_bottom = 128.0
rect_scale = Vector2( 0.6, 1 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LootLabel" type="Label" parent="."]
margin_left = 32.4907
margin_top = 17.746
margin_right = 47.4907
margin_bottom = 23.746
rect_scale = Vector2( 0.7, 0.7 )
custom_fonts/font = ExtResource( 2 )
text = "Loot"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="."]
margin_left = 6.0
margin_top = 26.0
margin_right = 72.0
margin_bottom = 92.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer"]
margin_right = 27.0
margin_bottom = 136.0

[node name="HBoxContainer" type="HBoxContainer" parent="ScrollContainer/VBoxContainer"]
margin_right = 27.0
margin_bottom = 16.0
script = ExtResource( 8 )

[node name="ItemSlot" type="Panel" parent="ScrollContainer/VBoxContainer/HBoxContainer"]
margin_right = 16.0
margin_bottom = 16.0
rect_min_size = Vector2( 16, 16 )
custom_styles/panel = SubResource( 1 )

[node name="TextureButton" type="TextureButton" parent="ScrollContainer/VBoxContainer/HBoxContainer/ItemSlot"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemAmount" type="Label" parent="ScrollContainer/VBoxContainer/HBoxContainer/ItemSlot"]
margin_left = 11.2373
margin_top = 13.2975
margin_right = 51.2373
margin_bottom = 27.2975
custom_fonts/font = SubResource( 2 )
text = "10"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemName" type="Label" parent="ScrollContainer/VBoxContainer/HBoxContainer"]
margin_left = 20.0
margin_top = 6.0
margin_right = 27.0
margin_bottom = 10.0
custom_fonts/font = SubResource( 3 )
text = "coin"

[node name="HBoxContainer2" type="HBoxContainer" parent="ScrollContainer/VBoxContainer"]
margin_top = 20.0
margin_right = 27.0
margin_bottom = 36.0
script = ExtResource( 8 )

[node name="ItemSlot" type="Panel" parent="ScrollContainer/VBoxContainer/HBoxContainer2"]
margin_right = 16.0
margin_bottom = 16.0
rect_min_size = Vector2( 16, 16 )
custom_styles/panel = SubResource( 1 )

[node name="TextureButton" type="TextureButton" parent="ScrollContainer/VBoxContainer/HBoxContainer2/ItemSlot"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemAmount" type="Label" parent="ScrollContainer/VBoxContainer/HBoxContainer2/ItemSlot"]
margin_left = 11.2373
margin_top = 13.2975
margin_right = 51.2373
margin_bottom = 27.2975
custom_fonts/font = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemName" type="Label" parent="ScrollContainer/VBoxContainer/HBoxContainer2"]
margin_left = 20.0
margin_top = 6.0
margin_right = 20.0
margin_bottom = 10.0
custom_fonts/font = SubResource( 3 )

[node name="HBoxContainer3" type="HBoxContainer" parent="ScrollContainer/VBoxContainer"]
margin_top = 40.0
margin_right = 27.0
margin_bottom = 56.0
script = ExtResource( 8 )

[node name="ItemSlot" type="Panel" parent="ScrollContainer/VBoxContainer/HBoxContainer3"]
margin_right = 16.0
margin_bottom = 16.0
rect_min_size = Vector2( 16, 16 )
custom_styles/panel = SubResource( 1 )

[node name="TextureButton" type="TextureButton" parent="ScrollContainer/VBoxContainer/HBoxContainer3/ItemSlot"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemAmount" type="Label" parent="ScrollContainer/VBoxContainer/HBoxContainer3/ItemSlot"]
margin_left = 11.2373
margin_top = 13.2975
margin_right = 51.2373
margin_bottom = 27.2975
custom_fonts/font = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemName" type="Label" parent="ScrollContainer/VBoxContainer/HBoxContainer3"]
margin_left = 20.0
margin_top = 6.0
margin_right = 20.0
margin_bottom = 10.0
custom_fonts/font = SubResource( 3 )

[node name="HBoxContainer4" type="HBoxContainer" parent="ScrollContainer/VBoxContainer"]
margin_top = 60.0
margin_right = 27.0
margin_bottom = 76.0
script = ExtResource( 8 )

[node name="ItemSlot" type="Panel" parent="ScrollContainer/VBoxContainer/HBoxContainer4"]
margin_right = 16.0
margin_bottom = 16.0
rect_min_size = Vector2( 16, 16 )
custom_styles/panel = SubResource( 1 )

[node name="TextureButton" type="TextureButton" parent="ScrollContainer/VBoxContainer/HBoxContainer4/ItemSlot"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemAmount" type="Label" parent="ScrollContainer/VBoxContainer/HBoxContainer4/ItemSlot"]
margin_left = 11.2373
margin_top = 13.2975
margin_right = 51.2373
margin_bottom = 27.2975
custom_fonts/font = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemName" type="Label" parent="ScrollContainer/VBoxContainer/HBoxContainer4"]
margin_left = 20.0
margin_top = 6.0
margin_right = 20.0
margin_bottom = 10.0
custom_fonts/font = SubResource( 3 )

[node name="HBoxContainer5" type="HBoxContainer" parent="ScrollContainer/VBoxContainer"]
margin_top = 80.0
margin_right = 27.0
margin_bottom = 96.0
script = ExtResource( 8 )

[node name="ItemSlot" type="Panel" parent="ScrollContainer/VBoxContainer/HBoxContainer5"]
margin_right = 16.0
margin_bottom = 16.0
rect_min_size = Vector2( 16, 16 )
custom_styles/panel = SubResource( 1 )

[node name="TextureButton" type="TextureButton" parent="ScrollContainer/VBoxContainer/HBoxContainer5/ItemSlot"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemAmount" type="Label" parent="ScrollContainer/VBoxContainer/HBoxContainer5/ItemSlot"]
margin_left = 11.2373
margin_top = 13.2975
margin_right = 51.2373
margin_bottom = 27.2975
custom_fonts/font = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemName" type="Label" parent="ScrollContainer/VBoxContainer/HBoxContainer5"]
margin_left = 20.0
margin_top = 6.0
margin_right = 20.0
margin_bottom = 10.0
custom_fonts/font = SubResource( 3 )

[node name="HBoxContainer6" type="HBoxContainer" parent="ScrollContainer/VBoxContainer"]
margin_top = 100.0
margin_right = 27.0
margin_bottom = 116.0
script = ExtResource( 8 )

[node name="ItemSlot" type="Panel" parent="ScrollContainer/VBoxContainer/HBoxContainer6"]
margin_right = 16.0
margin_bottom = 16.0
rect_min_size = Vector2( 16, 16 )
custom_styles/panel = SubResource( 1 )

[node name="TextureButton" type="TextureButton" parent="ScrollContainer/VBoxContainer/HBoxContainer6/ItemSlot"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemAmount" type="Label" parent="ScrollContainer/VBoxContainer/HBoxContainer6/ItemSlot"]
margin_left = 11.2373
margin_top = 13.2975
margin_right = 51.2373
margin_bottom = 27.2975
custom_fonts/font = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemName" type="Label" parent="ScrollContainer/VBoxContainer/HBoxContainer6"]
margin_left = 20.0
margin_top = 6.0
margin_right = 20.0
margin_bottom = 10.0
custom_fonts/font = SubResource( 3 )

[node name="HBoxContainer7" type="HBoxContainer" parent="ScrollContainer/VBoxContainer"]
margin_top = 120.0
margin_right = 27.0
margin_bottom = 136.0
script = ExtResource( 8 )

[node name="ItemSlot" type="Panel" parent="ScrollContainer/VBoxContainer/HBoxContainer7"]
margin_right = 16.0
margin_bottom = 16.0
rect_min_size = Vector2( 16, 16 )
custom_styles/panel = SubResource( 1 )

[node name="TextureButton" type="TextureButton" parent="ScrollContainer/VBoxContainer/HBoxContainer7/ItemSlot"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemAmount" type="Label" parent="ScrollContainer/VBoxContainer/HBoxContainer7/ItemSlot"]
margin_left = 11.2373
margin_top = 13.2975
margin_right = 51.2373
margin_bottom = 27.2975
custom_fonts/font = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemName" type="Label" parent="ScrollContainer/VBoxContainer/HBoxContainer7"]
margin_left = 20.0
margin_top = 6.0
margin_right = 20.0
margin_bottom = 10.0
custom_fonts/font = SubResource( 3 )

[node name="lootAll" type="TextureButton" parent="."]
margin_left = 6.35306
margin_top = 94.9465
margin_right = 38.3531
margin_bottom = 110.947
rect_scale = Vector2( 0.7, 0.7 )
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LootAllLabel" type="Label" parent="lootAll"]
margin_left = 7.03282
margin_top = 6.35915
margin_right = 35.0328
margin_bottom = 12.3591
rect_scale = Vector2( 0.7, 0.7 )
custom_fonts/font = ExtResource( 2 )
text = "Loot All"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="button_down" from="lootAll" to="." method="_on_lootAll_button_down"]
